Add tablet responsive

--- a/css/style.css
+++ b/css/style.css
@@ -127,3 +127,20 @@ img {
 /************************************************
     SOLUZIONE RESPONSIVE
  ************************************************/
+
+/* Breakpoint tablet  */
+@media screen and (max-width: 768px) {
+
+    .container{
+        width: 100%;
+    }
+
+}
+
+@media screen and (max-width: 480px) {
+
+    .container{
+        width: 100%;
+    }
+
+}
