--- a/css/style.css
+++ b/css/style.css
@@ -129,6 +129,7 @@ img {
  ************************************************/
 
 /* Breakpoint tablet  */
+
 @media screen and (max-width: 768px) {
 
     .container{
@@ -137,10 +138,46 @@ img {
 
 }
 
+/* Break point mobile  */
+
 @media screen and (max-width: 480px) {
 
     .container{
+        width: 80%;
+    }
+
+    .row{
+        flex-wrap: wrap;
+    }
+
+    .steps{
+        margin-bottom: 0;
+    }
+
+    .lessons .col{
         width: 100%;
+    }
+
+    .steps .col{
+        width: 100%;
+    }
+
+    .why-us{
+        background-color: #222222;
+        margin-bottom: 0;
+    }
+
+    .why-us h2{
+        padding-top: 50px;
+    }
+
+    .why-us .col-left{
+        width: 100%;
+    }
+
+    .why-us .col-right{
+        width: 100%;
+        margin-top: 50px;
     }
 
 }
